# Hammer-and-Anvil

./: README.md  baselines  environment.yml  figure_1  figure_2  figure_2.py  figure_8  finetune.py  forget_me_not  global_settings.py  multi_seed_runs.py  pyproject.toml  run_existing_attacks.py  run_experiment  setup  table_1  table_2  table_5  table_6  train.py  train_grid.py  train_local.py  varying_ft_size_exp.py
cache_dir/cifar10/: blended_trigger.pt  fine_tune_cache_100.npy  fine_tune_cache_1000.npy  fine_tune_cache_1500.npy  fine_tune_cache_2400.npy  fine_tune_cache_5000.npy
cache_dir/mnist/: fine_tune_cache_2400.npy
configs/existing_attacks/: badnet.yml  blended.yml  dba.yml  neurotoxin_badnet.yml  neurotoxin_blended.yml  replacement_badnet.yml  replacement_blended.yml
configs/forget_me_not/: fmn_badnet.yml
configs/local_baselines/: mnist_local_fine_tune_set_training.yml  table_1_local_finetune_set_train.yml  table_2_local_finetune_set_train.yml
configs/mnist/: final_2400.yml
configs/non_iid/: dirichlet_badnet_krum_opt_fine_tune_bisect.yml
configs/paper_figures/: figure_1.yml  figure_1_clean_only.yml  figure_2.yml
configs/table_1/: badnet_fed_avg_opt_fine_tune.yml  badnet_krum_opt_fine_tune.yml  badnet_mom_opt_fine_tune.yml  badnet_norm_opt_fine_tune.yml  badnet_replacement_opt_fine_tune.yml  badnet_rob_mom_opt_fine_tune.yml  blended.yml  blended_krum_opt_fine_tune.yml  blended_mom_opt_fine_tune.yml  blended_norm_opt_fine_tune.yml  blended_replacement_opt_fine_tune.yml  blended_rob_mom_opt_fine_tune.yml
notebooks/: paper_figures.ipynb
(+64 files in other folders)
